# AndroidTemplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Project.json  README.md
.github/workflows/: android.yml  emscripten.yml  linux.yml  macos.yml  windows.yml
Source/: App.State.c++  App.c++  App.ixx  App.main.c++  CMakeLists.txt  Events.c++  Events.impl.c++  Logger.c++  Variants.c++  Windows.c++  Windows.ixx  jni.c++  main.c++  main.cpp
Source/Android/: build.gradle.kts
Source/Android/app/: build.gradle.kts
Source/Android/app/src/main/cpp/: native-lib.cpp
Source/Android/app/src/main/java/com/diyou/dotcmake/: MainActivity.kt
Source/Android/app/src/main/res/values/: themes.xml
Source/Android/app/src/main/res/values-night/: themes.xml
Source/Android/buildSrc/: build.gradle.kts
Source/Android/buildSrc/src/main/kotlin/dev/dotcmake/: Config.kt
Source/Android/gradle/: libs.versions.toml
Source/Android/gradle/wrapper/: gradle-wrapper.properties
Source/Modules/: App.c++  CMakeLists.txt  Events.c++  Logger.c++  Window.c++
Source/Modules/Windows/: Default.c++
Source/Windows/: Default.c++  Renderer.c++  Window.c++
Source/android/: settings.gradle.kts
Source/android/app/: build.gradle.kts
Source/android/app/src/androidTest/java/com/diyou/dotcmake/: ExampleInstrumentedTest.kt
Source/android/app/src/main/: AndroidManifest.xml
Source/android/app/src/main/cpp/: CMakeLists.txt
Source/android/app/src/main/res/values/: strings.xml  themes.xml
Source/android/app/src/main/res/values-night/: themes.xml
Source/android/app/src/test/java/com/diyou/dotcmake/: ExampleUnitTest.kt
Source/android/gradle/wrapper/: gradle-wrapper.properties
